# Python-LLMTextualAnswer

./: README.md  pyproject.toml
docs/: Basic-usage.ipynb
src/LLMTextualAnswer/: __init__.py
tests/: test_llm_classify.py  test_llm_textual_answer.py  test_llm_textual_answer_ollama.py
