[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "LLMTextualAnswer"
version = "0.1.1"
description = "Find textual answers via an LLM."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["llm", "question-answer", "text-mining"]
authors = [
  {name = "Anton Antonov"}
]
dependencies = [
  "langchain-core>=0.1.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
